# Customer-Assistant

./: .gitignore  CMakeLists.txt  LICENSE  README.md  azure-pipelines.yml  main.cpp
.github/workflows/: build.yml
resource/: res.qrc
src/: about.cpp  about.h  couponList.cpp  couponList.h  errorDialog.cpp  errorDialog.h  mainwindow.cpp  mainwindow.h  preference.cpp  preference.h
